canvas size on smaller screens fixed

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -63,12 +63,10 @@ a:visited {
 }
 
 .worldimg {
-  /* grid-row: 2/3; */
   max-width: 70%;
   height: auto;
   display: block;
   margin: auto;
-  /* vertical-align: middle; */
   position: relative;
   top: 50%;
   transform: translateY(-50%);
@@ -82,5 +80,11 @@ a:visited {
 @media (max-width: 768px) {
   .chart2-div {
     margin-top: 7vh;
+  }
+}
+
+@media (max-width: 991px) {
+  canvas {
+    height: 50vh;
   }
 }
